fixtures/cs-enc-03/bad/cast5-decipheriv.ts
import { createDecipheriv } from "crypto";
export function decrypt(data: Buffer, key: Buffer, iv: Buffer) {
	return createDecipheriv("cast5-cbc", key, iv);
}
